--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,11 @@ dependencies:
   flutter_bloc: ^8.1.6
   dio: ^5.4.3+1
   equatable: ^2.0.5
+  flutter_foreground_service: 
+  android_alarm_manager_plus: ^4.0.3
+  flutter_background: ^1.2.0
+  flutter_background_service: ^5.0.6
+  receive_intent: ^0.2.5
 
 dev_dependencies:
   flutter_test:
